--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -28,7 +28,7 @@
 .flex_column {
   flex-direction: column;
 }
-svg:not(.tox-toolbar__group svg) {
+svg:not(.tox-icon svg) {
   height: 18px;
   width: 18px;
 }
@@ -107,7 +107,51 @@ body.page-id-5782 {
   padding: 10px 20px 10px 10px;
   text-align: left;
 }
-
+.customDropdown .selectedTab {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  color: #000;
+  font-weight: 500;
+}
+.customDropdown {
+  padding: 0 30px;
+}
+.customDropdown .dropdownButton {
+  background-color: #f3f5fa;
+  width: 100%;
+  justify-content: space-between;
+}
+.customDropdown .dropdownButton:hover {
+  background-color: #f3f5fa;
+}
+.customDropdown .dropdownButton .svg_bg_white {
+  background-color: #fff;
+}
+.customDropdown svg {
+  color: #000;
+}
+.selectedTab svg path {
+  fill: #00d9f5 !important;
+}
+.customDropdown .dropdownOptions {
+  box-shadow: 0.122px 0.993px 31px 0px rgba(0, 34, 79, 0.04);
+  background: #fff;
+  padding: 10px 20px;
+  border: 1px solid rgb(237, 240, 247);
+  margin: 10px 0;
+  border-radius: 10px;
+}
+.customDropdown .dropdownOption {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 20px 0;
+  background: #f3f5fa;
+  padding: 10px;
+  border-radius: 50px;
+  padding: 10px 20px;
+}
 .tabButton.active {
   background-color: #00d9f5;
   color: #001f3e;
@@ -331,6 +375,12 @@ button.active svg path {
   border-radius: 20px;
   flex-wrap: wrap;
 }
+.sellerCentralInnerTabsButtons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
 .sellerCentralInnerTabs .button_icon_wrapper {
   width: fit-content;
 }
@@ -493,6 +543,7 @@ button.active svg path {
   justify-content: end;
   text-align: center;
   background-repeat: no-repeat;
+  min-height: 300px;
 }
 .media_setup_last_card .media_setup_contents_footer a {
   background-color: #00d9f5;
@@ -633,6 +684,9 @@ button.active svg path {
 .domain_appraisal_inner_wrapper_heading h3 {
   color: #0067f0;
 }
+.domain_appraisal_inner_wrapper_heading img {
+  max-width: 100%;
+}
 .domain_appraisal_body_cards h5 {
   color: #00224f;
   font-weight: 500;
@@ -755,7 +809,7 @@ button.active svg path {
 .cardSelectorWrapper {
   overflow: auto;
   background-color: #fff;
-  padding: 50px;
+  padding: 40px;
   gap: 15px;
   border-radius: 15px;
 }
@@ -767,6 +821,9 @@ button.active svg path {
 .remove_image {
   background-color: transparent;
   border: transparent;
+}
+.domain_description_wrapper div[role="group"] {
+  flex-wrap: wrap;
 }
 /* .domain_description_wrapper .domain_description_titles a {
   background: linear-gradient(-69deg, #01d5f6, #2164ff 95%, #02d3f6);
@@ -887,6 +944,7 @@ button.active svg path {
   justify-content: center;
   gap: 20px;
   margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 .save_button_wrappers svg path {
   fill: #fff;
@@ -1654,8 +1712,14 @@ button.active svg path {
 }
 
 /* responsive */
+@media screen and (min-width: 767px) {
+  .hide_desktop {
+    display: none;
+  }
+}
 @media (max-width: 767px) {
-  .fd_column {
+  .fd_column,
+  .mob_fd_col {
     flex-direction: column;
   }
   .f_wrap {
@@ -1663,6 +1727,9 @@ button.active svg path {
   }
   .ws_container {
     padding: 0;
+  }
+  .mob_card_padding_20 {
+    padding: 20px;
   }
   .sellerCentralInnerTabs
     label:not(.sellerCentralInnerTabs button:first-child label),
@@ -1674,11 +1741,10 @@ button.active svg path {
   .sellerCentralInnerTabs .specialTabLabel {
     display: block;
   }
-  .sellerCentralInnerTabs {
+  .sellerCentralInnerTabsButtons {
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
-    padding: 30px;
   }
   .sellerCentralInnerTabs
     .button_icon_wrapper:not(.sellerCentralInnerTabs button:first-child) {
@@ -1714,5 +1780,35 @@ button.active svg path {
   .offers_tab_recent_offer_wrap,
   .tabContent {
     padding: 0;
+  }
+  /* add domain tabs */
+  .add_domain_wrapper {
+    padding: 20px;
+  }
+  .add_domain_generate_field,
+  .add_domain_generate_field input[type="text"],
+  .add_domain_generate_field form,
+  .media_content_wrapper,
+  .domain_appraisal_body_card {
+    width: 100%;
+  }
+  .add_domain_generate_field input[type="submit"] {
+    right: 24px;
+    transform: translate(0%, -50%);
+  }
+  .domain_description_wrapper .domain_description_titles a {
+    margin-top: 15px;
+  }
+  .save_button_wrappers button {
+    margin-top: 0;
+    padding: 20px;
+    width: 100%;
+  }
+  .sellerCentralInnerTabsButtons
+    .button_icon_wrapper
+    .svg_bg_white:not(
+      .sellerCentralInnerTabsButtons button:first-child .svg_bg_white
+    ) {
+    padding: 14px;
   }
 }
