--- a/src/components/CardSelector/CardSelector.module.css
+++ b/src/components/CardSelector/CardSelector.module.css
@@ -30,6 +30,9 @@
 .cardSelectorIndustriesWrapper .card {
   width: fit-content;
 }
+.cardSelectorIndustriesWrapper .card {
+  width: fit-content;
+}
 .card.selected {
   border: 2px solid rgb(118, 232, 249);
   background-color: #fff;
@@ -57,6 +60,7 @@
   padding-bottom: 50px;
   margin-top: 30px;
 }
+
 .cardContent span {
   background: linear-gradient(
     -45deg,
