--- a/src/components/Tabs/Dashboard.css
+++ b/src/components/Tabs/Dashboard.css
@@ -77,7 +77,7 @@
 .dashboard_domains_cards_wrapper .ws-card-manage {
   background-color: #00d9f5;
   color: #fff;
-  padding: 2px 8px;
+  padding: 4px 8px;
   border-radius: 5px;
   margin-left: auto;
 }
@@ -198,7 +198,7 @@
   color: #767676;
   fill: #767676;
 }
-.cust_review_point svg {
+.review_cust_detail .cust_review_point svg {
   width: 12px;
   height: 12px;
 }
