--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -721,6 +721,9 @@ button.active svg path {
   *:not(.domain_appraisal_inner_wrapper_heading div) {
   margin-top: 10px;
 }
+.domain_appraisal_inner_wrapper_heading h5 {
+  font-weight: 400;
+}
 .domain_appraisal_inner_wrapper_heading p {
   line-height: 32px;
 }
@@ -1341,7 +1344,7 @@ button.active svg path {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin: 30px 0;
+  margin-top: 30px;
 }
 .available_balance_card h2 {
   color: #fff;
@@ -1573,9 +1576,12 @@ button.active svg path {
   margin-bottom: 10px;
   font-size: 16px;
   line-height: 1.5;
-  color: #666;
+  color: #000;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 15px 0;
 }
-
 /* Table inside modal */
 /* .order_details_popup table {
   width: 100%;
