--- a/src/components/CardSelector/CardSelector.module.css
+++ b/src/components/CardSelector/CardSelector.module.css
@@ -23,6 +23,7 @@
   justify-content: space-between;
   align-items: center;
   width: calc(20% - 40px);
+  width: fit-content;
   transition: background-color 0.3s;
   flex: 0 0 auto;
   border: 2px solid rgb(247, 249, 253);
